--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,11 +1,12 @@
 
 *{
   font-family: 'Yu Gothic UI','ＭＳ Ｐ明朝','MS PMincho','ヒラギノ角ゴシック','Hiragino Sans',sans-serif;
-  color:#EEEEEE;
 }
 body{
   background-color: #44A5CB;
   font-size: 18px;
+  color:#EEEEEE;
+
 }
 
 .page_innner{
@@ -21,21 +22,22 @@ body{
   width:100%;
   margin:50px auto;
   padding:30px auto;
+  
 }
 
 .contents .box-title {
   position: absolute;
   display: inline-block;
   top: -22px;
-  left: -3px;
+  left: 3px;
   padding: 0 9px;
   height: 25px;
   line-height: 25px;
   font-size: 17px;
-  background: #007AB7;
+  background: #15658a;
   color: #EEEEEE;
   font-weight: bold;
-  border-radius: 5px 5px 0 0;
+  border-radius: 5px 5px 5px ;
 }
 
 .header_stop_name{
@@ -191,42 +193,66 @@ body{
 }  
 
 
-  .btn-border {
-    display: inline-block;
-    width: 180px;
-    text-align: center;
-    border: 2px solid #9ec34b;
-    font-size: 32px;
-    color: #9ec34b;
-    text-decoration: none;
-    font-weight: bold;
-    padding: 8px 16px;
-    border-radius: 4px;
-    transition: .4s;
-    margin:10px auto;
-  }
-  
-  .btn-border:hover {
-    background-color: #9ec34b;
-    border-color: #cbe585;
-    color: #FFF;
-  }
+
+
+
+.reminder{
+  display: block;
+  font-size: 20px;
+  margin:24px 30px;
+  padding:0px auto;
+  text-align: center;
+  background-color: #EEEEEE;
+  color:#1F1F1F;
+  box-shadow: 4px 2px 2px #15658a;
+  cursor : pointer;
+
+}
+
+.balloon-right-btm {
+  position: relative;
+  display: inline-block;
+  margin: 0em 0px -100px px;
+  padding: 0 0px;
+  width: 90px;
+  height: 90px;
+  line-height: 90px;
+  text-align: center;
+  color: #EEEEEE;
+  font-size: 20px;
+  font-weight: bold;
+  background: #15658a;
+  border-radius: 50%;
+  box-sizing: border-box;
+}
+
+.balloon-right-btm:before {
+  content: "";
+  position: absolute;
+  bottom: -8px;
+  right: -8px;
+  margin-top: -15px;
+  border: 15px solid transparent;
+  border-left: 15px solid #15658a;
+  z-index: 0;
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
 
 .input_form{
   display: flex;
   justify-content: center;
-  font-size: 30px;
   margin-bottom: 12px;
-  margin-left: auto;
-  margin-right:auto;
+  margin-top:30px;
+  padding-top:12px;
+  font-size: 24px;
+  
+ /* margin-left: auto;
+  margin-right:auto;*/
+
 }
 
-#bus_time
-
-.next_page{
-  display: flex;
-  justify-content: center;
-  font-size: 20px;
-  margin:20px auto;
+#bus_time{
+  color:black;
+  font-size: 22px;
 }
-
