--- a/stylesheet_sp.css
+++ b/stylesheet_sp.css
@@ -17,6 +17,8 @@ body{
   display: block;
 }
 
+
+
 .contents{
   position: relative;
   display:block;
@@ -44,13 +46,14 @@ body{
   border-radius: 5px 5px 5px ;
 }
 
-.header_stop_name{
+.header_stop_name {
   margin-top:30px;
-    text-align: center;
-    font-size: 24px;
-    margin-left:auto;
-    margin-right:auto;
+  text-align: center;
+  font-size: 24px;
+  margin-left:auto;
+  margin-right:auto;
 }
+
 
 .header_stop_name::after{
   content:'';
@@ -62,6 +65,8 @@ body{
   height:5px;
   width:200px;
 }
+
+
 
 .bus_situation_now{
   display: block;
@@ -267,3 +272,33 @@ body{
   color:black;
   font-size: 22px;
 }
+
+#reminder_confirm{
+  z-index:1;
+  position:fixed;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  background-color: rgba(0,0,0,0.5);
+  display:flex;
+  align-items:center;
+  justify-content: center;
+}
+
+#reminder_confirm_contents{
+  z-index: 2;
+  width:50%;
+  text-align: center;
+  padding:0.3em;
+  background: #eee;
+  color : black;
+}
+
+.fade-enter-active, .fade-leave-active {
+  transition: opacity .3s;
+}
+.fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
+  opacity: 0;
+}
+
